--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
-    "postinstall": "npm rebuild grpc --target=6.1.0 --target_arch=x64 --target_platform=linux --target_libc=glibc"
+    "postinstall": "npm rebuild grpc --target=8.1.0 --target_arch=x64 --target_platform=linux --target_libc=glibc"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/jbrown136/Show-me-a-story-serverless-framework#readme",
   "dependencies": {
-    "firebase": "^4.13.0",
-    "grpc": "^1.10.1",
+    "firebase-admin": "^5.12.0",
     "node-fetch": "^2.1.2"
   }
 }
